# creapy-web

./: .gitignore  Dockerfile  Dockerfile.dev  Makefile  README.md  app.py  docker-compose.dev.yml  docker-compose.yml  fly.toml  render.yaml  requirements.txt  setup_creapy_docker.py
creapy/: .gitignore  README.md  setup.cfg
creapy/creapy/: __init__.py  config.yaml  user_config.yaml
creapy/creapy/feature_extraction/: __init__.py  feature_extraction.py
creapy/creapy/model/: __init__.py  classify.py  model.py  postprocessing.py  preprocessing.py  update_model.py
creapy/creapy/model/training_models/: model_ALL.csv  model_FEMALE.csv  model_MALE.csv
creapy/creapy/utils/: __init__.py  config.py  evaluation.py  helpers.py  plot.py  read_wav.py  text_grid_to_intervals.py
creapy/examples/: creapy_demo.ipynb  creapy_demo.py
static/: index.html  script.js  style.css
