[metadata]
name = creapy
version = attr: creapy.__version__
author = 'Michael Paierl, Thomas Röck'
author_email = 'paierl@student.tugraz.at, thomas.roeck@student.tugraz.at'
classifiers =
    # License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
# license = BSD 3-Clause License
description = An automatic creak detection tool for speech signals
long_description = file: README.md
long_description_content_type = text/markdown
keywords = creak, voice, speech


[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.22.0
    praat-parselmouth>=0.4.0
    tgt>=1.4.0
    pandas>=1.4.0
    soundfile>=0.10.0
    PyYAML==6.0.0
    rich>=13.2.0
    scikit-learn>=1.2.0
    ruamel.yaml==0.17.21
# [flake8]
# max-line-length = 92
# max-doc-length = 75
# exclude =
#     ./build/*
# per-file-ignores = __init__.py:F401


# [isort]
# line_length = 92
# multi_line_output = 3
# include_trailing_comma = true
